src/style/markdown.sass
$font-family: 'Source Sans Pro', sans-serif
$breakpoint-tablet: 768px

@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap')

:root
    --primColor: #0099FF
    --textColor: #111
    --displayColor: white
    --bgColor: white

body
    color: var(--textColor)
    font-family: $font-family
    background-color: var(--bgColor)
    margin: 0
    padding: 0

    #header-photo
        width: calc(100% - 20px)
        background-image: url("../images/doc/webBannerPhone.jpg")
        background-color: var(--bgColor)
        background-repeat: no-repeat
        background-size: contain
        background-position: center
        margin: 80px 4px 0 4px
        padding: 48px 0 0 12px
        @media screen and (min-width: $breakpoint-tablet)
            height: 620px
            background-image: url("../images/desktop.png")
        @media screen and (max-width: $breakpoint-tablet)
            height: 300px
            background-image: url("../images/mobile.png")

    h2
        color: var(--displayColor)
        margin: 64px 0

    #main
        position: relative
        min-height: 100vh

        button
            background-color: var(--primColor)
            color: var(--displayColor)
            height: 64px
            width: 192px
            border: none
            margin: 16px auto
            cursor: pointer

    nav
        width: calc(100vw - 16px)
        height: 64px
        position: fixed
        top: 0
        left: 0
        background-color: var(--primColor)
        color: var(--displayColor)
        display: flex
        align-content: center
        padding: 0 0 0 16px
        z-index: 999

        a
            color: var(--displayColor)
            text-decoration: none
            &:hover
                text-decoration: underline

        ul
            display: flex
            justify-content: center
            align-items: center
            padding: 0px
            margin: 0px 0px 0px 16px
            list-style-type: none

            li
                padding: 8px 16px 0px 16px

    #hamburger
        position: fixed
        top: 64px
        height: 48px
        width: 80px
        background-color: var(--bgColor)
        transition: right 0.2s
        border-radius: 32px 0px 0px 32px
        padding: 0px 0px 0px 4px
        box-shadow: -8px 3px 10px -3px rgba(0,0,0,0.2)
        cursor: pointer

        #arrow
            margin: 0 8px 0 0
            transform: scale()

    main
        @media screen and (min-width: $breakpoint-tablet)
            padding: 100px 64px 128px 64px
        @media screen and (max-width: $breakpoint-tablet)
            padding: 100px 64px 160px 64px

        h1
            color: var(--primColor)
            font-weight: bold
            font-size: 3rem
            margin: 12px 0 8px 0

        h2
            color: var(--textColor)
            margin: 64px 0 8px 0
            @media screen and (min-width: $breakpoint-tablet)
                font-size: 48px
            @media screen and (max-width: $breakpoint-tablet)
                font-size: 24px

        h3
            color: var(--textColor)
            margin: 24px 0 8px 0

        h4
            color: var(--textColor)
            font-weight: bold
            font-size: 1.25 rem
            margin: 24px 0 8px 0

        h5
            color: var(--textColor)
            margin: 24px 0 8px 0

        h6
            color: var(--textColor)
            margin: 24px 0 8px 0

        p
            color: var(--textColor)
            margin: 4px 0
            font-size: 1 rem

        .doc-txt
            @media screen and (min-width: $breakpoint-tablet)
                margin: 0 0 0 32px
            @media screen and (max-width: $breakpoint-tablet)
                margin: 0 0 0 4px

        code
            font-family: $font-family
            color: var(--primColor)

    .document-main
        display: grid
        grid-template-columns: auto auto
        padding: 64px 0 0 0

        p
            margin: 32px

        article
            padding: 16px
            height: calc(100vh - 96px)
            overflow-y: auto

        aside
            height: calc(100vh - 96px)
            padding: 16px
            transition: width 0.37s
            transition: box-shadow 0.5s
            overflow-y: auto

            ul
                list-style-type: none
                padding: 0

                li
                    margin: 4px 0

                    a
                        color: var(--primColor)
                        text-decoration: none
                        &:hover
                            text-decoration: underline

    .gatsby-resp-image-wrapper

        margin: 0 !important
        background-color: var(--bgColor)

        .gatsby-resp-image-image
            background-color: var(--bgColor)
            box-shadow: none !important

    footer
        width: calc(100% - 64px)
        padding: 16px 32px
        background-color: var(--primColor)
        color: var(--bgColor)
        flex-shrink: 0
        position: absolute
        bottom: 0
        @media screen and (min-width: $breakpoint-tablet)
            height: 64px
        @media screen and (max-width: $breakpoint-tablet)
            height: 150px

        ul
            list-style-type: none
            display: grid
            padding: 0
            @media screen and (min-width: $breakpoint-tablet)
                grid-template-columns: auto auto auto
                justify-content: space-around
            @media screen and (max-width: $breakpoint-tablet)
                grid-template-columns: auto

            li
                @media screen and (min-width: $breakpoint-tablet)
                    width: 200px
                    grid-template-columns: auto auto auto
                    text-align: center
                    justify-content: space-around
                @media screen and (max-width: $breakpoint-tablet)
                    grid-template-columns: auto

                a
                    text-decoration: none
                    color: var(--displayColor)
                    &:hover
                        text-decoration: underline
                        color: var(--displayColor)

